# UNLP

./: .gitignore
Rust/rust/: Cargo.toml
Rust/rust/src/: ejemplo.rs  lucas_igarzabal_e1.rs  lucas_igarzabal_e2.rs  lucas_igarzabal_e3.rs  main.rs  tp1.rs  tp2.rs  tp3.rs  tp4.rs  tp5.rs
Rust/rust/tpfinal/.history/sistema/: lib_20230703164106.rs  lib_20230703164125.rs
Rust/rust/tpfinal/other/report/.history/: lib_20230709085459.rs  lib_20230709085906.rs  lib_20230709085942.rs  lib_20230709090028.rs  (+18 more)
Rust/rust/tpfinal/report/: Cargo.toml  lib.rs
Rust/rust/tpfinal/report/.history/: Cargo_20230708104220.toml  Cargo_20230708104235.toml  Cargo_20230708104358.toml  Cargo_20230709085142.toml  Cargo_20230709085746.toml  lib_20230708103643.rs  lib_20230708104502.rs  lib_20230708104533.rs  lib_20230708104543.rs  lib_20230708104700.rs  lib_20230708104711.rs  lib_20230708104937.rs  lib_20230708110929.rs  lib_20230708110956.rs  lib_20230708112755.rs  lib_20230708112843.rs  lib_20230708113108.rs  lib_20230708113216.rs  lib_20230708113307.rs  lib_20230708113321.rs  lib_20230708113425.rs  lib_20230708113458.rs  lib_20230708113540.rs  lib_20230708113658.rs  lib_20230708113804.rs  lib_20230708114400.rs  lib_20230708114414.rs  lib_20230708114426.rs  lib_20230708120334.rs  lib_20230708120425.rs  lib_20230708120430.rs  lib_20230708120439.rs  lib_20230708120501.rs  lib_20230708120523.rs  lib_20230708120545.rs  lib_20230708120556.rs  lib_20230708120603.rs  lib_20230708120720.rs  lib_20230708120815.rs  lib_20230709091625.rs  (+40 more)
Rust/rust/tpfinal/report/sistema/: Cargo.toml  lib.rs
(+941 files in other folders)
