[package]
name = "rust"
version = "1.70.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-contract = "3.0.1"
date = "0.1.3"
debug-ignore = "1.0.5"
faux = "0.1.9"
random-number = "0.1.8"
random-string = "1.0.0"
serde = "1.0.160"
serde_json = "1.0.96"
